--- a/package.json
+++ b/package.json
@@ -2,20 +2,31 @@
   "name": "web-server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "start": "node -r dotenv/config src/server.js",
+    "dev": "nodemon -r dotenv/config --inspect src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "email-templates": "^7.0.4",
     "express": "^4.17.1",
+    "handlebars": "^4.7.6",
+    "moment": "^2.24.0",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.9",
+    "nodemailer": "^6.4.6",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.3",
+    "paypal-rest-sdk": "^1.8.1",
+    "pug": "^2.0.4",
     "validator": "^13.0.0"
   }
 }
